# grimoirebots

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  manage.py  pyproject.toml
.github/: dependabot.yml
accounts/: models.py  tests.py
grimoirebots/: asgi.py  settings.py  urls.py  wsgi.py
