[tool.poetry]
name = "grimoirebots"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Sergio Merino Hernández <merinhunter94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
